[fix] correct list of skills spacing

--- a/src/styles/scss/components/_about.scss
+++ b/src/styles/scss/components/_about.scss
@@ -12,41 +12,54 @@
 }
 
 .bio__intro-container {
-  @include display-flex;
-  flex-direction: column;
-  justify-content: center;
   background: linear-gradient($lightest-grey, #F2F2FF);
   color: $darkest-blue;
-  width: 95%;
+  line-height: 2;
+  padding: 0 20px;
 }
 
-.bio__header {
-  margin: 0;
-  width: $w-full;
+.bio__third--paragraph {
+  margin-bottom: 50px;
 }
 
 .bio__secondary--info {
   width: $w-full;
-  display: flex;
+  @include display-flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .bio__list-of-skills {
   padding: 0;
   margin: 0;
+  width: 90%;
+  margin-bottom: 50px;
 }
 
 .bio-skill {
   list-style: none;
 }
 
-@media screen and (min-width: 768px) {
-  .terminal {
-    max-width: 190px;
-    margin-right: 60px;
-  }
+.bio__subheader {
+  width: 90%;
+  max-width: 1024px;
+  font-weight: 500;
+  font-size: 32px;
+  color: #84CEC7;
+}
 
+.bio-skill__header {
+  color: #F2F5F8;
+  white-space: pre-wrap;
+}
+
+.bio-skill__content {
+  width: 90%;
+  color: #9DB5BE;
+}
+
+
+
+@media screen and (min-width: 768px) {
   .bio__main-container {
     font-size: 1.5rem;
   }
@@ -55,10 +68,14 @@
   .bio__intro-container {
     line-height: 1.6;
     width: $w-full;
+    @include display-flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
   }
 
   .bio__header {
-    margin-top: 25px;
+    margin: 25px 0 0 0;
     font-size: 48px;
     width: 70%;
     max-width: 1024px;
@@ -69,7 +86,7 @@
   .bio__third--paragraph, .bio__list-of-skills {
     width: 70%;
     max-width: 1024px;
-
+    margin: 20px 0;
   }
 
   .bio__third--paragraph {
